--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="assets/js/index.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-	<script src="https://use.fontawesome.com/f1ba2b81d2.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<base href="http://www.jarrodyellets.com">
 
 
@@ -47,11 +47,11 @@
 		<div class="banner">
 			<h1 class="name">Jarrod Yellets</h1>
 			<div class="menu">
-			  <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu"><i class="fa fa-envelope" aria-hidden="true"></i></i></a>
-			  <a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fa fa-github" aria-hidden="true"></i></a>
-			  <a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fa fa-codepen" aria-hidden="true"></i></a>
-			  <a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-			  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menu" id="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+			  <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu"><i class="fa fa-envelope" aria-hidden="true" title="mail icon"></i></i></a>
+			  <a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
+			  <a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
+			  <a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
+			  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menu" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
 			</div>
 			<p class="job">Developer</p>
 		</div>
@@ -60,26 +60,26 @@
 	<div class="container-fluid about">
     <h2 class="title">About</h2>
     <div class"row">
-      <div class="col-sm-6 section-row aboutRow">
+      <div class="col-md-6 section-row aboutRow">
       	<h3 class="heading">My Stack</h3>
       	<div class="icons">
 	        <div class="frontEnd">
-	       		<i class="devicon-html5-plain-wordmark colored icon"></i>
-	         	<i class="devicon-css3-plain-wordmark colored icon"></i>
-	         	<i class="devicon-sass-original colored icon"></i>
-	         	<i class="devicon-javascript-plain colored icon"></i>
-	         	<i class="devicon-react-original-wordmark colored icon"></i>
+	       		<i class="devicon-html5-plain-wordmark colored icon" title="html icon"></i>
+	         	<i class="devicon-css3-plain-wordmark colored icon" title="css icon"></i>
+	         	<i class="devicon-sass-original colored icon" title="sass icon"></i>
+	         	<i class="devicon-javascript-plain colored icon" title="javascript icon"></i>
+	         	<i class="devicon-react-original-wordmark colored icon" title="react icon"></i>
 	        </div>
 	        <div class="backEnd">
-	        	<i class="devicon-jquery-plain-wordmark colored icon"></i>
-	         	<i class="devicon-nodejs-plain-wordmark colored icon"></i>
-	         	<i class="devicon-mongodb-plain-wordmark colored icon"></i>
-	         	<i class="devicon-express-original-wordmark icon"></i>
-	         	<i class="devicon-git-plain-wordmark colored icon"></i>
+	        	<i class="devicon-jquery-plain-wordmark colored icon" title="jquery icon"></i>
+	         	<i class="devicon-nodejs-plain-wordmark colored icon" title="node icon"></i>
+	         	<i class="devicon-mongodb-plain-wordmark colored icon" title="mongodb icon"></i>
+	         	<i class="devicon-express-original-wordmark icon" title="express icon"></i>
+	         	<i class="devicon-git-plain-wordmark colored icon" title="git icon"></i>
 	        </div>
 	      </div>
        </div>
-       <div class="col-sm-6 section-row aboutRow" id="about-box">
+       <div class="col-md-6 section-row aboutRow" id="about-box">
          <h3 class="heading">Me</h3>
          <p class="text">My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium.  I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.</p>
        </div>
@@ -90,15 +90,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="row portContainer">
       <div class="col-xs-12 col-sm-6 section-row computer">
-      	<img class="placeholder" src="http://www.jarrodyellets.com/images/laptop.png">
-      	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png">
-      	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png">
-      	<img class="hid screen" id="pillow" src="http://www.jarrodyellets.com/images/pillow.png">
-      	<img class="hid screen" id="han" src="http://www.jarrodyellets.com/images/hans.png">
-      	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png">
-      	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png">
-      	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png">
-      	<img class="hid screen" id="moog" src="http://www.jarrodyellets.com/images/moog.png">
+      	<img class="placeholder" src="http://www.jarrodyellets.com/images/laptop.png" alt="laptop">
+      	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png" alt="laptop">
+      	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
+      	<img class="hid screen" id="pillow" src="http://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
+      	<img class="hid screen" id="han" src="http://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
+      	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
+      	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
+      	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
+      	<img class="hid screen" id="moog" src="http://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
       	<div class="buttonDiv top">
          <button class="button" id="pilBtn">Real Estate</button>
          <button class="button" id="hanBtn">Restaurant</button>
@@ -180,10 +180,10 @@
          <p class="text">Fill out the form to submit a question, comment, or to inquire about a future project.  You can also reach me a <a href="mailto:jarrod@jarrodyellets.com">jarrod@jarrodyellets.com</a></p>
          <p class="text">Find me at the following places:</p>
          <div class="menuContact">
-			<a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fa fa-github" aria-hidden="true"></i></a>
-			<a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fa fa-codepen" aria-hidden="true"></i></a>
-			<a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menuContact" id="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+			<a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
+			<a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
+			<a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
+			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menuContact" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
 		</div>
        </div>
       <div class="col-sm-6 section-row contactForm">
