--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="Jarrod Yellets, Portfolio">
 	<meta name="author" content="Jarrod Yellets">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#333333">
 	<title>Jarrod Yellets</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.ripples.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script
+  src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+  integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
+  crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 	<script type="text/javascript" src="assets/js/index.js"></script>
@@ -48,10 +52,10 @@
 			<h1 class="name">Jarrod Yellets</h1>
 			<div class="menu">
 			  <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu"><i class="fa fa-envelope" aria-hidden="true" title="mail icon"></i></i></a>
-			  <a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
-			  <a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
-			  <a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menu" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
-			  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menu" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
+			  <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"><i class="fab fa-github" title="github icon"></i></a>
+			  <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"><i class="fab fa-codepen" title="codepen icon"></i></a>
+			  <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"><i class="fab fa-twitter" title="twitter icon"></i></a>
+			  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menu" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
 			</div>
 			<p class="job">Developer</p>
 		</div>
@@ -117,56 +121,56 @@
 	       <div class="portAbout" id="filler">
 	        <h2 class="portTitle">Welcome</h2>
 	       	<p class="text">Welcome to my portfolio.  Please look around, play with the games, and try and break the apps.  If you have any questions or comments, please don't hesitate to contact me.  You can see all of the source code and the rest of my projects on GitHub and CodePen. If you want to see what I am currently building, please following me on Twitter.</p>
-	       	<a href="https://github.com/jarrodyellets" target="_blank"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank"><button class="button">Follow Me</button></a>
+	       	<a href="https://github.com/jarrodyellets" target="_blank" rel="noopener"><button class="button">View All Code</button></a><a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener"><button class="button">Follow Me</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="mooAbout">
 	       	<h2 class="portTitle">Moog Drum Machine</h2>
 	       	<p class="text">Built with React, the Moog Drum Machine allows you to combine and alter the sounds from your favorite synthesizer.  Choose between two sound banks, as well as adjustments for volume and tempo.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and React</p>
-	       	<a href="https://polar-wildwood-45548.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="https://polar-wildwood-45548.herokuapp.com/" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/drumMachine" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="tenAbout">
 	       	<h2 class="portTitle">Top Ten Jukebox</h2>
 	       	<p class="text">Allows you to see and play the Billboard top ten songs from any date.  Integrated with Spotify to allow you to save any of the songs to a new or existing playlist.</p>
 	       	<h2>Built With:</h2>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
-	       	<a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="newAbout">
 	       	<h2 class="portTitle">Dynamic Newspaper</h2>
 	       	<p class="text">Allows you to see all of the lastest news in one place.  The dynamic newspaper will load the lastest headlines upon refresh.  Click on the article to view story from original source.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
-	       	<a href="/projects/newspaper/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/newspaper/index.html" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="radAbout">
 	       	<h2 class="portTitle">Analog Radio</h2>
 	       	<p class="text">Listen to radio the way it was meant to be, with the Analog Radio.  Hold the mouse down over the knob to manually tune, or click one of the five buttons to go to a preset station.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, and jQuery</p>
-	       	<a href="/projects/analogradio/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/analogRadio" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/analogradio/index.html" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/analogRadio" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="pilAbout">
 	       	<h2 class="portTitle">Pillow Real Estate</h2>
 	       	<p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or rent.  The design is based on Zillow.com</p>
 	       	<h3>Built With:</h3>
 	       	<p>Node.js, Express.js, HTML5, CSS3, JavaScript, React, and Google Maps API</p>
-	       	<a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="hanAbout">
 	       	<h2 class="portTitle">Hans' Boathouse</h2>
 	       	<p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse.  Responsive layout created with CSS Grid.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
-	       	<a href="/projects/hansboathouse/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/hansboathouse/index.html" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
 	       <div class="portAbout hidRight" id="retAbout">
 	       	<h2 class="portTitle">Retro YouTube Television</h2>
 	       	<p class="text">Want to channel surf with YouTube videos?  Now you can with the Retro YouTube Television!  Each channel plays a different category of video.  Check the channel guide for complete lineup.</p>
 	       	<h3>Built With:</h3>
 	       	<p>HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
-	       	<a href="/projects/retroyoutube/index.html" target="_blank"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="button">View Code</button></a>
+	       	<a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button class="button">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button class="button">View Code</button></a>
 	       </div>
     	</div>
      </div>
@@ -180,10 +184,10 @@
          <p class="text">Fill out the form to submit a question, comment, or to inquire about a future project.  You can also reach me a <a href="mailto:jarrod@jarrodyellets.com">jarrod@jarrodyellets.com</a></p>
          <p class="text">Find me at the following places:</p>
          <div class="menuContact">
-			<a href="https://github.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
-			<a href="https://codepen.io/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
-			<a href="https://twitter.com/jarrodyellets" target="_blank" class="hvr-pop menuContact" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
-			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" class="hvr-pop menuContact" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
+			<a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
+			<a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
+			<a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
+			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
 		</div>
        </div>
       <div class="col-sm-6 section-row contactForm">
