updated img links

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="row portContainer">
       <div class="col-xs-12 col-sm-6 section-row computer">
-      	<img class="placeholder" src="http://www.jarrodyellets.com/images/laptop.png" alt="laptop">
-      	<img class="screen center" id="laptop" src="http://www.jarrodyellets.com/images/laptop.png" alt="laptop">
-      	<img class="hid screen" id="radio" src="http://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
-      	<img class="hid screen" id="pillow" src="http://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
-      	<img class="hid screen" id="han" src="http://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
-      	<img class="hid screen" id="retro" src="http://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
-      	<img class="hid screen" id="newspaper" src="http://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
-      	<img class="hid screen" id="ten" src="http://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
-      	<img class="hid screen" id="moog" src="http://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
+      	<img class="placeholder" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
+      	<img class="screen center" id="laptop" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
+      	<img class="hid screen" id="radio" src="https://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
+      	<img class="hid screen" id="pillow" src="https://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
+      	<img class="hid screen" id="han" src="https://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
+      	<img class="hid screen" id="retro" src="https://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
+      	<img class="hid screen" id="newspaper" src="https://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
+      	<img class="hid screen" id="ten" src="https://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
+      	<img class="hid screen" id="moog" src="https://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
       	<div class="buttonDiv top">
          <button class="button" id="pilBtn">Real Estate</button>
          <button class="button" id="hanBtn">Restaurant</button>
@@ -184,10 +184,10 @@
          <p class="text">Fill out the form to submit a question, comment, or to inquire about a future project.  You can also reach me a <a href="mailto:jarrod@jarrodyellets.com">jarrod@jarrodyellets.com</a></p>
          <p class="text">Find me at the following places:</p>
          <div class="menuContact">
-			<a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-github" title="github icon"></i></a>
-			<a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-codepen" title="codepen icon"></i></a>
-			<a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" id="n-home"><i class="fab fa-twitter" title="twitter icon"></i></a>
-			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact" id="linkedin"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
+			<a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact"><i class="fab fa-github" title="github icon"></i></a>
+			<a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact"><i class="fab fa-codepen" title="codepen icon"></i></a>
+			<a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact"><i class="fab fa-twitter" title="twitter icon"></i></a>
+			<a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact"><i class="fab fa-linkedin-in" title="linken icon"></i></a>
 		</div>
        </div>
       <div class="col-sm-6 section-row contactForm">
