--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="keywords" content="Jarrod Yellets, Portfolio">
 	<meta name="author" content="Jarrod Yellets">
+	<meta name="description" content="Jarrod Yellets | Web Developer / React / JavaScript">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#333333">
 	<title>Jarrod Yellets</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.ripples.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" async="true"></script>
 	<script
   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous" async="true"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 	<script type="text/javascript" src="assets/js/index.js"></script>
@@ -96,13 +97,13 @@
       <div class="col-xs-12 col-sm-6 section-row computer">
       	<img class="placeholder" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
       	<img class="screen center" id="laptop" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
-      	<img class="hid screen" id="radio" src="https://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
-      	<img class="hid screen" id="pillow" src="https://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
-      	<img class="hid screen" id="han" src="https://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
-      	<img class="hid screen" id="retro" src="https://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
-      	<img class="hid screen" id="newspaper" src="https://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
-      	<img class="hid screen" id="ten" src="https://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
-      	<img class="hid screen" id="moog" src="https://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
+      	<img class="hid" id="radio" src="https://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
+      	<img class="hid" id="pillow" src="https://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
+      	<img class="hid" id="han" src="https://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
+      	<img class="hid" id="retro" src="https://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
+      	<img class="hid" id="newspaper" src="https://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
+      	<img class="hid" id="ten" src="https://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
+      	<img class="hid" id="moog" src="https://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
       	<div class="buttonDiv top">
          <button class="button" id="pilBtn">Real Estate</button>
          <button class="button" id="hanBtn">Restaurant</button>
