--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link rel="manifest" href="https://www.jarrodyellets.com/manifest.json">
 	<base href="http://www.jarrodyellets.com">
 
 
@@ -97,13 +98,13 @@
       <div class="col-xs-12 col-sm-6 section-row computer">
       	<img class="placeholder" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
       	<img class="screen center" id="laptop" src="https://www.jarrodyellets.com/images/laptop.png" alt="laptop">
-      	<img class="hid" id="radio" src="https://www.jarrodyellets.com/images/radio.png" alt="laptop with radio">
-      	<img class="hid" id="pillow" src="https://www.jarrodyellets.com/images/pillow.png" alt="laptop with real estate">
-      	<img class="hid" id="han" src="https://www.jarrodyellets.com/images/hans.png" alt="laptop with restaurant webpage">
-      	<img class="hid" id="retro" src="https://www.jarrodyellets.com/images/retro.png" alt="laptop with retro youtube">
-      	<img class="hid" id="newspaper" src="https://www.jarrodyellets.com/images/newspaper.png" alt="laptop with newspaper">
-      	<img class="hid" id="ten" src="https://www.jarrodyellets.com/images/jukebox.png" alt="laptop with jukebox">
-      	<img class="hid" id="moog" src="https://www.jarrodyellets.com/images/moog.png" alt="laptop with moog">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/radio.png" class="hid" id="radio" alt="laptop with radio">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillow.png" class="hid" id="pillow" alt="laptop with real estate">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/hans.png" class="hid" id="han" alt="laptop with resaurant webpage">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/retro.png" class="hid" id="retro" alt="laptop with retro youtube">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/newspaper.png" class="hid" id="newspaper" alt="laptop with newspaper">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/jukebox.png" class="hid" id="ten" alt="laptop with jukebox">
+      	<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/moog.png" class="hid" id="moog" alt="laptop with moog">
       	<div class="buttonDiv top">
          <button class="button" id="pilBtn">Real Estate</button>
          <button class="button" id="hanBtn">Restaurant</button>
@@ -213,5 +214,14 @@
   	</div>
    </footer>
 	<noscript>Your browser must run JavaScript to view this page.</noscript>
+	<script>
+	function init() {
+	var imgDefer = document.getElementsByTagName('img');
+	for (var i=0; i<imgDefer.length; i++) {
+	if(imgDefer[i].getAttribute('data-src')) {
+	imgDefer[i].setAttribute('src',imgDefer[i].getAttribute('data-src'));
+	} } }
+	window.onload = init;
+	</script>
 </body>
 </html>
