--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="description" content="Jarrod Yellets | Web Developer / React / JavaScript">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#333333">
+	<link rel="icon" 
+      type="image/png" 
+      href="https://www.jarrodyellets.com/images/polaroidprofileIcon.png">
 	<title>Jarrod Yellets</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.ripples.js"></script>
