Changed hero image:

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 	<script type="text/javascript" src="assets/js/index.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Raleway|Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="manifest" href="https://www.jarrodyellets.com/manifest.json">
-	<base href="http://www.jarrodyellets.com">
 
 
 </head>
@@ -31,36 +30,24 @@
 	<div class="container-fluid main-window">
 
 		<!-- Nav Bar -->
-		<nav class="navbar navbar-default links">
-			<div class="container navcon">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
+		<div class="nav-bar">
+			<div class="linksWrapper">
+				<div class="navIcons">
+				  <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" aria-label="mail-icon"><i class="fa fa-envelope" aria-hidden="true" itemprop="mail icon"></i></i></a>
+				  <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="github-icon"><i class="fab fa-github" itemprop="github icon"></i></a>
+				  <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="codepen-icon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
+				  <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="twitter-icon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
+				  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="linkedin-icon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
 				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right" id="navLinks">
-						<li class="links hvr-pop"><span id="about">ABOUT</span></li>
-			      <li class="links hvr-pop"><span id="portfolio">PORTFOLIO</span></li>
-			      <li class="links hvr-pop"><span id="contact">CONTACT</span></li>
-					</ul>
+				<div class="navLinks">
+					<a href="javascript:void(0)" class="closeBtn"><i class="fas fa-times"></i></a>
+					<a href="#products" class="links">About</a>
+					<a href="#about" class="links aboutLink">Portfolio</a>
+					<a href="#contact" class="links contactLink">Contact</a>
 				</div>
+				<a href="javascript:void(0);" 
+			   class="hamburger"><i class="fas fa-bars"></i></a>
 			</div>
-		</nav>
-
-		<div class="banner">
-			<h1 class="name">Jarrod Yellets</h1>
-			<div class="menu">
-			  <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" aria-label="mail-icon"><i class="fa fa-envelope" aria-hidden="true" itemprop="mail icon"></i></i></a>
-			  <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="github-icon"><i class="fab fa-github" itemprop="github icon"></i></a>
-			  <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="codepen-icon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
-			  <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="twitter-icon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
-			  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="linkedin-icon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
-			</div>
-			<p class="job">Developer</p>
 		</div>
 	</div>
 
